scripts/04_Pod_with_Tolerance.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
  tolerations:
    - key: "key1"
      operator: "Equal"
      value: "value1"
      effect: "NoSchedule"
  containers:
    - name: alpine
      image: alpine
      command: ["sleep", "3600"]
