scripts/05A_Pod_with_NodeSelector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - name: alpine
      image: alpine
      command: ["sleep", "3600"]
