scripts/05B_Pod_with_NodeAffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: gpu
                operator: In
                values:
                  - "true"
  containers:
    - name: alpine
      image: alpine
      command: ["sleep", "3600"]
