scripts/10_Deployment_with_RollingUpdates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        # how many pods above desired count during update
      maxUnavailable: 1  # how many pods can be down during update
  revisionHistoryLimit: 5  # how many old ReplicaSets to keep for rollback
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25   # pin the version
