scripts/15_ServiceAccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-pod
spec:
  serviceAccountName: my-service-account
  containers:
    - name: nginx
      image: nginx
