scripts/16_RBAC.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-pod
  namespace: default
spec:
  serviceAccountName: pod-reader-sa
  containers:
    - name: kubectl
      image: bitnami/kubectl
      command: ["sleep", "3600"]
