scripts/17_ConfigMap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
  namespace: default
spec:
  containers:
    - name: alpine
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
        - name: config-vol
          mountPath: /etc/config   # also mount as file
  volumes:
    - name: config-vol
      configMap:
        name: my-config
