scripts/18_Secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
  namespace: default
spec:
  containers:
    - name: alpine
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
        - name: secret-vol
          mountPath: /etc/secrets
          readOnly: true           # good practice for secrets
  volumes:
    - name: secret-vol
      secret:
        secretName: my-secret
