scripts/19_PriorityClass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: priority-pod
  namespace: default
spec:
  priorityClassName: high-priority
  containers:
    - name: alpine
      image: alpine
      command: ["sleep", "3600"]
